--- a/src/style.scss
+++ b/src/style.scss
@@ -39,7 +39,7 @@ dialog {
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-    background-color: red;
+    background-color: white;
 }
 
 #side-panel {
@@ -52,14 +52,14 @@ dialog {
 }
 
     #home-section {
-        background-color: blue;
+        background-color: white;
     }
 
     #projects-section {
         position: relative;
         max-height: 460px;
         height: 460px;
-        background-color: green;
+        background-color: white;
     }
 
         #project-container {
@@ -89,7 +89,7 @@ dialog {
                 border: none;
                 font-size: 20px;
                 width: 10px;
-                background-color: #d7e3fc;
+                background-color: transparent;
             }
 
             .open-project {
@@ -122,15 +122,13 @@ dialog {
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
-    background-color: orange;
+    background-color: white;
 }
 
 #main-panel-div {
     height: 430px;
     position: relative;
 }
-
-
 
 #task-button {
     position: absolute;
@@ -146,11 +144,21 @@ footer {
     background-color: purple;
 }
 
-.important {
-    background-color: pink;
+.task-div {
+    display: grid;
+    grid-template-columns: 120px 1fr 1fr 120px 120px 120px;
 }
 
-.task-div {
+.edit-task-button, .priority-div, .delete-task-button {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    font-size: 30px;
+    width: 20px;
+    background-color: transparent;
+}
+
+.important > .priority-div {
+    color: red;
 }
