--- a/src/style.scss
+++ b/src/style.scss
@@ -208,8 +208,18 @@ footer {
 
 .full-task-button {
     position: absolute;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
     top: 10px;
     right: 10px;
+
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+    line-height: 10px;
 }
 
 
@@ -217,4 +227,21 @@ footer {
     display: flex;
     align-items: center;
     height: 30px;
+}
+
+#task-button {
+    border: none;
+    border-radius: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    background-color: transparent;
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+    font-size: 42px;
+    line-height: 10px;
 }
